# solstat

./: Cargo.toml  Contributing.md  README.md  Solstat.toml  solstat_report.md
.github/workflows/: test.yml
contracts/: BinHelper.sol  BitMath.sol  Buffer.sol  Constants.sol  Decoder.sol  Encoder.sol  FeeDistributionHelper.sol  FeeHelper.sol  JoeLibrary.sol  LBErrors.sol  LBFactory.sol  LBPair.sol  LBQuoter.sol  LBRouter.sol  LBToken.sol  Math128x128.sol  Math512Bits.sol  Oracle.sol  PendingOwnable.sol  ReentrancyGuardUpgradeable.sol  SafeCast.sol  SafeMath.sol  Samples.sol  SwapHelper.sol  TokenHelper.sol  TreeMath.sol  WardenPledge.sol
docs/: Contributing.md  example_report.md  identified-optimizations.md  identified-quality-assurance.md  identified-vulnerabilities.md  indentified-optimizations.md  indentified-vulnerabilities.md
examples/: parse-contract-ast.rs  parse-contract-into-ast.rs  parse_contract.rs
src/: lib.rs  main.rs  opts.rs  utils.rs
src/analyzer/: ast.rs  mod.rs  utils.rs
src/ast/: ast.rs  mod.rs  node.rs
src/optimizations/: address_balance.rs  address_zero.rs  assign_update_array_value.rs  cache_array_length.rs  constant_variables.rs  if_bool_equals_bool.rs  immutable_variables.rs  increment_decrement.rs  memory_to_calldata.rs  mod.rs  multiple_require.rs  pack_storage_variables.rs  pack_struct_variables.rs  payable_function.rs  safe_math.rs  shift_math.rs  solidity_keccak256.rs  solidity_math.rs  sstore.rs  string_errors.rs  template.rs
src/parser/: parse.rs
src/report/: generation.rs  mod.rs  optimization_report.rs  qa_report.rs  (+1 more)
(+102 files in other folders)
