[package]
name = "solstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version= "4.0.15", features = ["derive"]}
solang-parser = "0.1.13"
indicatif = "0.16.2"
regex = "1.6.0"
toml = "0.5.9"
serde = {version= "1.0.147",  features = ["derive"]}
